math and search result areas

--- a/gradle.properties
+++ b/gradle.properties
@@ -14,3 +14,5 @@ archives_base_name=Codex
 # Libraries
 # https://maven.wispforest.io/io/wispforest/owo-lib/
 owo_version=0.12.22+1.21.9
+# https://github.com/xdrop/fuzzywuzzy
+fuzzywuzzy_version=1.4.0
