math parsing and functions

--- a/gradle.properties
+++ b/gradle.properties
@@ -16,3 +16,5 @@ archives_base_name=Codex
 owo_version=0.12.22+1.21.9
 # https://github.com/xdrop/fuzzywuzzy
 fuzzywuzzy_version=1.4.0
+# https://lallafa.objecthunter.net/exp4j/index.html
+exp4j_version=0.4.8
