--- a/gradle.properties
+++ b/gradle.properties
@@ -18,3 +18,5 @@ owo_version=0.12.22+1.21.9
 fuzzywuzzy_version=1.4.0
 # https://lallafa.objecthunter.net/exp4j/index.html
 exp4j_version=0.4.8
+# https://modrinth.com/mod/modmenu/versions
+modmenu_version=16.0.0-rc.1
