--- a/gradle.properties
+++ b/gradle.properties
@@ -1,22 +1,21 @@
 # Done to increase the memory available to gradle.
 org.gradle.jvmargs=-Xmx2G
-# Fabric Properties
-# check these on https://modmuss50.me/fabric.html
-minecraft_version=1.21.10
-yarn_mappings=1.21.10+build.2
-loader_version=0.18.0
-fabric_version=0.138.3+1.21.10
 kotlin_loader_version=1.13.7+kotlin.2.2.21
 # Mod Properties
 mod_version=1.0-SNAPSHOT
 maven_group=io.github.cootshk
 archives_base_name=QuickSearch
 # Libraries
-# https://maven.wispforest.io/io/wispforest/owo-lib/
-owo_version=0.12.22+1.21.9
+## Per project:
+ # owo_version
+ # minecraft_version=1.21.10
+ # yarn_mappings=1.21.10+build.2
+ # loader_version=0.18.0
+ # fabric_version=0.138.3+1.21.10
+##
+
 # https://github.com/xdrop/fuzzywuzzy
 fuzzywuzzy_version=1.4.0
 # https://lallafa.objecthunter.net/exp4j/index.html
 exp4j_version=0.4.8
-# https://modrinth.com/mod/modmenu/versions
-modmenu_version=16.0.0-rc.1
+
