--- a/src/main/resources/quicksearch.mixins.json5
+++ b/src/main/resources/quicksearch.mixins.json5
@@ -2,7 +2,11 @@
   "required": true,
   "minVersion": "0.8",
   "package": "io.github.cootshk.quicksearch.mixin",
-  "compatibilityLevel": "JAVA_21",
+  //? if >1.21.5 {
+   "compatibilityLevel": "JAVA_21",
+  //?} else {
+  /*"compatibilityLevel": "JAVA_17",
+  *///?}
   "mixins": [
     "IMixinCollapsibleContainer",
     "QSMixinEntityType",
