--- a/versions/1.20.1/gradle.properties
+++ b/versions/1.20.1/gradle.properties
@@ -11,4 +11,4 @@ owo_version=0.11.2+1.20
 # https://modrinth.com/mod/modmenu/versions
 modmenu_version=7.2.2
 # https://modrinth.com/mod/create-fabric/versions
-create_fabric_version=6.0.8.0
+create_fabric_version=0.5.1-j-build.1631+mc1.20.1
