--- a/versions/1.21.10/gradle.properties
+++ b/versions/1.21.10/gradle.properties
@@ -10,3 +10,7 @@ fabric_version=0.138.3+1.21.10
 owo_version=0.12.22+1.21.9
 # https://modrinth.com/mod/modmenu/versions
 modmenu_version=16.0.0-rc.1
+# https://modrinth.com/mod/rei/versions
+rei_version=21.9.812
+# https://modrinth.com/mod/jei/versions?l=fabric
+jei_version=26.2.0.27
