--- a/versions/1.20.1/gradle.properties
+++ b/versions/1.20.1/gradle.properties
@@ -12,3 +12,7 @@ owo_version=0.11.2+1.20
 modmenu_version=7.2.2
 # https://modrinth.com/mod/create-fabric/versions
 create_fabric_version=0.5.1-j-build.1631+mc1.20.1
+# https://modrinth.com/mod/rei/versions
+rei_version=12.1.785
+# https://modrinth.com/mod/jei/versions?l=fabric
+jei_version=15.20.0.127
