--- a/versions/1.20.1/gradle.properties
+++ b/versions/1.20.1/gradle.properties
@@ -3,6 +3,7 @@
 minecraft_version=1.20.1
 loader_version=0.18.1
 fabric_version=0.92.6+1.20.1
+parchment_version=2023.09.03
 
 # Libraries
 # https://maven.wispforest.io/io/wispforest/owo-lib/
