--- a/versions/1.21.10/gradle.properties
+++ b/versions/1.21.10/gradle.properties
@@ -3,6 +3,7 @@
 minecraft_version=1.21.10
 loader_version=0.18.0
 fabric_version=0.138.3+1.21.10
+parchment_version=2025.10.12
 
 # Libraries
 # https://maven.wispforest.io/io/wispforest/owo-lib/
